[gd_scene load_steps=18 format=2]

[ext_resource path="res://enemy/Bat.png" type="Texture" id=1]
[ext_resource path="res://Shadows/SmallShadow.png" type="Texture" id=2]
[ext_resource path="res://bat.gd" type="Script" id=3]
[ext_resource path="res://Stat/stats.tscn" type="PackedScene" id=4]
[ext_resource path="res://Hitbox.Hurtbox/Hurtbox.tscn" type="PackedScene" id=5]
[ext_resource path="res://enemy/PlayerDetection.tscn" type="PackedScene" id=6]
[ext_resource path="res://Hitbox.Hurtbox/Hitbox.tscn" type="PackedScene" id=7]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 16, 24 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "fly",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=7]
radius = 3.75021

[sub_resource type="CircleShape2D" id=8]
radius = 76.164

[sub_resource type="CapsuleShape2D" id=9]
radius = 5.38385
height = 2.04982

[sub_resource type="CircleShape2D" id=10]
radius = 3.56153

[node name="bat" type="KinematicBody2D"]
collision_layer = 8
script = ExtResource( 3 )

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( -0.530327, 2.82843 )
frames = SubResource( 6 )
animation = "fly"
frame = 4
playing = true
offset = Vector2( 0, -12 )

[node name="Sprite2" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 7 )
one_way_collision_margin = 0.0

[node name="BotStats" parent="." instance=ExtResource( 4 )]
max_hp = 10

[node name="PlayerDetection" parent="." instance=ExtResource( 6 )]
position = Vector2( 0, -12.1976 )

[node name="CollisionShape2D" parent="PlayerDetection" index="0"]
modulate = Color( 1, 1, 1, 0.196078 )
shape = SubResource( 8 )

[node name="Hurtbox" parent="." instance=ExtResource( 5 )]
position = Vector2( -0.530327, 2.82843 )
collision_layer = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0.739006, -15.5366 )
shape = SubResource( 9 )

[node name="Hitbox" parent="." instance=ExtResource( 7 )]
position = Vector2( -0.530327, 2.82843 )
collision_layer = 16
collision_mask = 4
dps = 25

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 0.779533, -14.5885 )
shape = SubResource( 10 )

[connection signal="no_hp" from="BotStats" to="." method="_on_stats_no_hp"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]

[editable path="PlayerDetection"]
[editable path="Hurtbox"]
[editable path="Hitbox"]
